# app/controllers/api/auth/RegisterController.js
@@ -11,12 +11,14 @@ class RegisterController {
 				return res.status(422).json({code:"Unprocessable Entity",message:"Validation failed",errors:errors.array( {onlyFirstError: true} )});
             }
 
-            let {name,email,password} = req.body;
+            let {name,email,password,gmail_id,fb_id} = req.body;
 			password = await bcrypt.hash(password,10);
 			await User.create({
 				name:name,
 				email:email,
 				password:password,
+				gmail_id:gmail_id,
+				fb_id:fb_id
             })
 
             return res.status(201).json();
