# app/controllers/api/post/PostController.js
@@ -6,12 +6,14 @@ const CommentModel = require(process.cwd()+'/app/models').comment;
 const {destination, fileName,imageFilter} = require(process.cwd()+'/app/helpers/file_upload.js');
 const {NotFoundException, ForbiddenException} = require(process.cwd()+'/app/exceptions/exception.js');
 const { validationResult } = require('express-validator');
+const Op = require('sequelize').Op;
 const multer = require('multer');
 const storage = multer.diskStorage({
     destination:destination ,
     filename: fileName
 })
 const upload = multer({ storage: storage, fileFilter:imageFilter,limits: { fileSize: 1000*1000*2 } }).array('files',5);
+const config = require(process.cwd()+'/config');
 
 class PostController{
 	async upload_files(req, res, next){
@@ -85,7 +87,17 @@ class PostController{
                     return {post_id:post_id,file:files};
                 })
                 await PostImageModel.bulkCreate(files);
-            }
+			}
+			await post.reload();
+
+			if(post.post_image.length){
+				let postImage = post.post_image.map(doc=>{
+					doc.dataValues.fileUrl = config.app.baseUrl+"/uploads/user_"+post.user_id+"/"+doc.file;
+					return doc;
+				});
+				post.dataValues.post_image = postImage;
+			}
+			console.log(post);
             return res.status(200).json(post);
 		}catch(err){
 			next(err);
@@ -94,11 +106,21 @@ class PostController{
 
 	async show(req, res, next){
 		try{
-			let post = await PostModel.findOne({ where:{ id:req.params.id },include:'post_image' });
+			let post = await PostModel.findOne({ where:{ id:req.params.id },include:[ {model:CommentModel,include:[UserModel]},{model:PostImageModel,as:'post_image'} ] });
 
 			if(!post){
 				throw new NotFoundException('Post not found!');
 			}
+			if(post.post_image.length){
+				let postImage = post.post_image.map(doc=>{
+					doc.dataValues.fileUrl = config.app.baseUrl+"/uploads/user_"+post.user_id+"/"+doc.file;
+					return doc;
+				});
+				// postImage.push(...postImage);
+				// postImage.push(...postImage);
+				post.dataValues.post_image = postImage;
+			}
+
 			return res.status(200).json(post);
 		}catch(err){
 			next(err);
@@ -121,9 +143,132 @@ class PostController{
 					continue;
 				}
 			}
-			return res.status(201).json();
+			return res.status(204).json();
 		}catch(err){
 			next(err)
+		}
+	}
+
+	async deletPostImage(req, res, next){
+		try{
+			let post_id = req.params.postId;
+			let file_id = req.params.fileId;
+			let postImage = await PostImageModel.findOne({ where:{ id:file_id,post_id:post_id } });
+			if(!postImage){
+				throw new NotFoundException('Post Image not found!');
+			}
+			let file_path = process.cwd()+'/public/uploads/user_'+req.user.id+'/'+postImage.file;
+			fs.exists(file_path,(exists)=>{
+				if(exists){
+					fs.unlinkSync(file_path);
+				}
+			})
+			await postImage.destroy();
+			return res.status(204).json();
+
+		}catch(err){
+			next(err);
+		}
+	}
+
+	async user(req, res, next){
+		try{
+			let user_id = req.user.id;
+			let queryData = {
+				current_page:req.query.page ? req.query.page:1,
+			}
+
+			let options = {
+				page: queryData.current_page,
+				paginate: 5,
+				include:['post_image','user'],
+				order: [['id', 'DESC']],
+				where:{ user_id:user_id }
+			}
+			let search = '';
+			if(req.query.search){
+				options.where={title:{ [Op.like]:`%${req.query.search}%` }};
+				search = "?search="+req.query.search;
+			}
+
+			const { docs, pages, total } = await PostModel.paginate(options);
+
+			let links={};
+			if(parseInt(queryData.current_page)<=pages){
+				if(queryData.current_page != 1){
+					links.prev_link = req.appUrl+'/'+req.baseUrl+"/?page="+(parseInt(queryData.current_page)-1)+search;
+				}
+				if(pages !=parseInt(queryData.current_page)) {
+					links.next_link = req.appUrl+'/'+req.baseUrl+"/?page="+(parseInt(queryData.current_page)+1)+search;
+				}
+			}
+
+			//let docs = await PostModel.findAll({ where:{ user_id:user_id }, include:'post_image' });
+			if(!docs.length){
+				throw new NotFoundException('No post found for user');
+			}
+
+			let postImage = docs.map(doc=>doc.post_image.map(dpi=>{
+				dpi.file = config.app.baseUrl+"/uploads/user_"+docs[0].user_id+"/"+dpi.file;
+				return dpi;
+			}));
+			docs.post_image = postImage;
+			return res.status(200).json({data:docs,metadata:{current_page:queryData.current_page,pages:pages, total_results:total,links:links} });
+
+		}catch(err){
+			next(err);
+		}
+	}
+
+	async all(req, res, next){
+
+		try{
+
+			let queryData = {
+				current_page:req.query.page ? req.query.page:1,
+			}
+
+			let options = {
+				page: queryData.current_page,
+				paginate: 5,
+				include:['post_image','user'],
+				order: [['id', 'DESC']]
+			}
+			let search = '';
+			if(req.query.search){
+				options.where={title:{ [Op.like]:`%${req.query.search}%` }}
+				search = "?search="+req.query.search;
+			}
+
+			const { docs, pages, total } = await PostModel.paginate(options);
+
+			if(!docs.length){
+				throw new NotFoundException('No post found for user');
+			}
+
+			let links={};
+			if(parseInt(queryData.current_page)<=pages){
+				if(queryData.current_page != 1){
+					links.prev_link = req.appUrl+req.baseUrl+"/?page="+(parseInt(queryData.current_page)-1)+search;
+				}
+				if(pages !=parseInt(queryData.current_page)) {
+					links.next_link = req.appUrl+req.baseUrl+"/?page="+(parseInt(queryData.current_page)+1)+search;
+				}
+				links.self_link = req.appUrl+req.baseUrl+"/?page="+(parseInt(queryData.current_page))+search;
+			}
+			//let posts = await PostModel.findAll({include:'post_image' });
+			//console.log(posts);
+
+
+			let postImage = docs.map(doc=>doc.post_image.map(dpi=>{
+				dpi.file = config.app.baseUrl+"/uploads/user_"+docs[0].user_id+"/"+dpi.file;
+				return dpi;
+			}));
+			docs.post_image = postImage;
+			return res.status(200).json({data:docs,metadata:{current_page:queryData.current_page,pages:pages, total_results:total,links:links}});
+
+		}catch(err){
+			next(err);
 		}
 	}
 }
