# app/controllers/api/user/UserController.js
@@ -1,9 +1,10 @@
+const config = require(process.cwd()+'/config');
 
 class UserController {
 
 	async profile(req, res, next) {
 		try{
-			res.status(200).json({status:true,message:'request processed',data:req.user});
+			res.status(200).json(req.user);
 		}catch(err){
 			next(err);
 		}
@@ -12,8 +13,10 @@ class UserController {
 	async uploadProfileImage(req, res, next) {
         try{
             let user = req.user;
-            await user.update({profile_image:req.file.filename});
-            return res.status(200).json(req.file)
+			await user.update({profile_image:req.file.filename});
+			let file = {...req.file};
+			file.imageUrl = config.app.baseUrl+"/uploads/user_"+req.user.id+"/"+file.filename;
+            return res.status(200).json(file)
         }catch(err){
             next(err);
         }
